<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/SkyBlue"
    android:id="@+id/referenceToLinerLayout" >

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/politics"
        style="@style/CategoryStyle"
        android:background="@color/BlueViolet"
        android:text="@string/politics_label" />

    <TextView
        android:id="@+id/culture"
        style="@style/CategoryStyle"
        android:background="@color/CadetBlue"
        android:text="@string/cultural_label" />

    <TextView
        android:id="@+id/style"
        style="@style/CategoryStyle"
        android:background="@color/DodgerBlue"
        android:text="@string/style_label" />

    <TextView
        android:id="@+id/music"
        style="@style/CategoryStyle"
        android:background="@color/SteelBlue"
        android:text="@string/music_label" />

    <TextView
        android:id="@+id/family"
        style="@style/CategoryStyle"
        android:background="@color/Blue"
        android:text="@string/family_label" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/dc_flowers"
        android:scaleType="centerCrop" />
</LinearLayout>
</ScrollView>